Bug 721353 - Fix invisible outline regression introduced by bug 719022. r=paul
UltraBlame original commit: 4870e4fe1320cbbdc9c89f91e82ac6d3016ce765

--- a/browser/devtools/styleeditor/styleeditor.css
+++ b/browser/devtools/styleeditor/styleeditor.css
@@ -132,19 +132,13 @@ flex
 stylesheet
 -
 name
-{
-outline
-:
-none
-;
-}
-.
-stylesheet
--
-name
 >
 label
 {
+display
+:
+inline
+;
 cursor
 :
 pointer
